# TrackEval

./: setup.cfg
trackeval/: __init__.py
