[metadata]
name = trackeval
version = 2.0.1
author = unfollow7
author_email = unfollowjingjin@live.com
description = Code for evaluating object tracking
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/unfollow7/TrackEval
project_urls =
    Bug Tracker = https://github.com/unfollow7/TrackEval/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
license_files = LICENSE

[options]
install_requires =
    numpy
    scipy
packages = find:

[options.packages.find]
include = trackeval*
